examples/misc/error/gen_alloc-tmp-array.bfr
codegen [
  $alloc {
    a: array(3) { x }
  }
  + a:x
]